--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ section {
     background-color: var(--color5);
     max-width: 80%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding-top: var(--gutter);
@@ -51,6 +51,7 @@ section {
     margin-top: var(--gutter);
     margin-bottom: var(--gutter);
     border: solid 2px var(--color1);
+    
 }
 
 header {
@@ -88,4 +89,41 @@ footer {
     justify-content: flex-end;
     background-color: var(--color3);
     box-shadow: var(--shadow);
+}
+
+.cups{
+
+    display: flex;
+    flex-direction: row;
+   
+    
+
+}
+
+.cup{
+display: flex;
+flex-direction: column;
+margin:10px;
+max-width: 300px;
+margin-top: 200px;
+margin-left: 100px;
+
+
+
+}
+
+.button{
+    width: 100x;
+    height: 40px;
+    flex-direction: column;
+    background-color: rgb(255, 248, 248);
+    margin: 10px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 15px;
+}
+
+.cup-img{
+ max-width: fit-content;
+ max-height: 50px;
 }
